<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.solutions.systemaccountlogins.AccountsListActivity" >

    <item android:id="@+id/menu_item_search"
    	android:title="@string/application_name"
    	android:icon="@android:drawable/ic_menu_search"
    	android:showAsAction="ifRoom|withText"
    	android:actionViewClass="android.widget.SearchView"
    />
    
    <item android:id="@+id/menu_item_new_account"
    	android:icon="@android:drawable/ic_menu_add"
   		android:title="@string/new_account"
    	android:showAsAction="ifRoom|withText"/>

    <!-- 
     <item
                android:id="@+id/menu_item_populate_system"
                android:orderInCategory="1"
                android:showAsAction="ifRoom|withText"
                android:title="@string/populate_system"/>
            <item
                android:id="@+id/menu_item_send_details"
                android:orderInCategory="2"
               	android:showAsAction="ifRoom|withText"
                android:title="@string/send_details"/>
    
   -->
            
        <item
        android:id="@+id/menu_overflow"
        android:orderInCategory="11111"
        android:showAsAction="always"
        android:title="@string/options_menu">
        <menu>
            <item
                android:id="@+id/menu_item_populate_system"
                android:orderInCategory="1"
                android:showAsAction="always"
                android:title="@string/populate_system"/>
            <item
                android:id="@+id/searchby"
                android:orderInCategory="2"
                android:showAsAction="always"
                android:title="@string/searchby">
                
                <menu>
                    <item android:id="@+id/application_name"
              		  android:title="@string/application_name" />
                    
                    
                    <item android:id="@+id/server_name"
                 		  android:title="@string/server_name" />
                </menu>
                
            </item>    
            <item
                android:id="@+id/menu_item_refresh"
                android:orderInCategory="3"
                android:showAsAction="always"
                android:title="@string/refresh"/>
            <item
                android:id="@+id/menu_item_storage"
                android:orderInCategory="3"
                android:showAsAction="always"
                android:title="@string/storage"/>
        </menu>
    </item>

</menu>
