<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    
    <GridLayout
      	android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="16dp"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingTop="16dp"
		android:columnCount="2">
		
    <TextView android:id="@+id/intro_detail_blurb_criteria"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginLeft="10dp"
		android:layout_marginBottom="15dp" style="@style/intro_blurb"
		android:layout_columnSpan="2"
		android:layout_row="0"
		android:layout_column="0"
		android:text="@string/intro_detail_blurb_criteria" />
    
   
    <TextView android:id="@+id/user_name_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="1"
		android:layout_column="0"
		
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/user_name_label" />
    
    <TextView android:id="@+id/user_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="1"
		android:layout_column="1"
		android:text="@string/user_name" style="@style/label"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp" />
    
    
    
   
      
    <TextView android:id="@+id/application_name_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="2"
		android:layout_column="0"
		
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/application_name_label" />
    
    <EditText android:id="@+id/application_name"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_row="2"
		android:layout_column="1"
		android:hint="@string/application_name_text"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/edit_text" />	
		
		
     <TextView android:id="@+id/server_name_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="3"
		android:layout_column="0"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/server_name_label" />
    
    <EditText android:id="@+id/server_name"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_row="3"
		android:layout_column="1"
		android:hint="@string/server_name_text"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/edit_text" />	
		
    
    <TextView android:id="@+id/server_login_id_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="4"
		android:layout_column="0"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/server_login_id_label" />
    
    <EditText android:id="@+id/server_login_id"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_row="4"
		android:layout_column="1"
		android:hint="@string/server_login_id_text"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/edit_text" />	
		
    
    <LinearLayout 
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="5"
		android:layout_column="0"
		android:layout_columnSpan="2"
		
        >
    	<TextView android:id="@+id/server_login_password_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
			style="@style/label" android:text="@string/server_login_password_label" />
    
    	<EditText android:id="@+id/server_login_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/server_login_password_text"
			android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
			style="@style/edit_text" />	
		
    	<ImageView
    	    android:id="@+id/image_generator"
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:src="@drawable/generator1"
        	android:layout_marginLeft="10dp" android:layout_marginBottom="5dp" android:layout_marginTop="5dp"
        	android:contentDescription="@string/generator_logo"/>
    </LinearLayout>
		
    <TextView android:id="@+id/environment_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="6"
		android:layout_column="0"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/environment_label" />
    
   
    
    <Spinner android:id="@+id/environment"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="6"
		android:layout_column="1"
		android:entries="@array/environments"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/edit_text" />	
		
    <Button android:id="@+id/created_date_button"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:layout_row="7"
		android:layout_column="0"
		style="@style/label" android:text="@string/created_date_label" />
    
    <TextView android:id="@+id/created_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="7"
		android:layout_column="1"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label"  />
    
    <TextView android:id="@+id/expired_label"
        android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:layout_row="8"
		android:layout_column="0"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/expired_label" />
    
    <CheckBox 
        android:id="@+id/expired"
        android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:layout_row="8"
		android:layout_column="1"
		android:background="@drawable/bg_stroke"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
 		/>

    <TextView android:id="@+id/description_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="9"
		android:layout_column="0"
		android:layout_columnSpan="2"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/description_label" />
    
    <EditText android:id="@+id/description"
		android:layout_width="match_parent" 
		android:layout_height="90dp"
		android:layout_row="10"
		android:layout_column="0"
		android:gravity="top|left"
		android:layout_columnSpan="2"
		android:hint="@string/description_text"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"   
		style="@style/edit_text"/>
    
    <TextView android:id="@+id/display_notes"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="11"
		android:layout_column="0"
		android:layout_columnSpan="2"
		android:clickable="true"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label_link" android:text="@string/display_notes"/>
    
    <LinearLayout 
        android:id="@+id/toggle_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
       
        android:layout_row="12"
		android:layout_column="0"
		android:layout_columnSpan="2"
        >
      <TextView android:id="@+id/notes_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/notes_label" />
    
      <EditText android:id="@+id/notes"
		android:layout_width="match_parent" 
		android:layout_height="90dp"
		
		android:gravity="top|left"
		
		android:hint="@string/notes_text"
		
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"   
		style="@style/edit_text"/>
      
      
   </LinearLayout> 
   
   <LinearLayout 
        android:id="@+id/submit_canel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       
        android:layout_row="13"
		android:layout_column="0"
		android:layout_columnSpan="2"
        >
      
       <Button 
           android:id="@+id/save_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/save"
           style="@style/label"
           />
       
       <Button 
           android:id="@+id/cancel_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/cancel"
           style="@style/label"
           />
   </LinearLayout>
   
   </GridLayout> 
</ScrollView>
