<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/activity_grey"
    tools:context="com.solutions.systemaccountlogins.MainActivity" >

    <TextView android:id="@+id/intro_blurb_criteria"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginLeft="10dp"
		android:layout_marginBottom="15dp" style="@style/intro_blurb"
		android:text="@string/intro_blurb_criteria" />

	<TextView android:id="@+id/user_name_label"
	    android:labelFor="@+id/user_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/intro_blurb_criteria"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/user_name_label" />
	
	<EditText android:id="@+id/user_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/user_name_label"
		android:hint="@string/user_name_hint"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/edit_text" />	
		
	
	<TextView android:id="@+id/user_password_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:labelFor="@+id/user_password"
		android:layout_below="@id/user_name"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		style="@style/label" android:text="@string/user_password_label" />
	
	<EditText android:id="@+id/user_password"
		android:layout_width="fill_parent"
		android:inputType="textPassword"
		android:layout_height="wrap_content"
		android:layout_below="@id/user_password_label"
		android:hint="@string/user_password_hint"
		android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
		android:cursorVisible="true"
		style="@style/edit_text" />	
		
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:layout_below="@id/user_password">

     
    <Button android:id="@+id/submit_button"  
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"      
        android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
        style="@style/button" android:text="@string/login" />
    
    <!-- 
    <Button android:id="@+id/register_button"  
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"      
        android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"
        style="@style/button" android:text="@string/register" />
    -->
  </LinearLayout>

</RelativeLayout>
